# inspector-gadget

./: .gitingore  BUILD.bazel  README.md  WORKSPACE  bazel-bin  bazel-inspector-gadget  bazel-out  bazel-testlogs  go.mod  go.sum  main.go
cmd/: BUILD.bazel  inject.go  root.go
gadget/: BUILD.bazel  injector.go
old-script-version/: .gitignore  download-frida-gadget.sh  go-go-gadget-inject.sh  inject-gadget-to-native-so.py  send_script.py
old-script-version/config/: frida-gadget-default-config.conf
old-script-version/scripts/: hook_recv.js  memscan.js  print_webviews.js  reverse_shell.js  reverse_shell_arm64.js  socket_activity.js  test.js  test_func.js  turn_off_wifi.js
utils/: BUILD.bazel  apkresigner.go  apktool.go  lief.go  shell.go
