load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "apkresigner.go",
        "apktool.go",
        "lief.go",
        "shell.go",
    ],
    importpath = "github.com/ice1n36/inspector-gadget/utils",
    visibility = ["//visibility:public"],
    deps = ["@com_github_spf13_afero//:go_default_library"],
)
